# Android-Debloater-in-C

./: .gitignore  CMakeLists.txt
etc/: bloatware_data.txt
include/: app_func.h  device_func.h  program_control.h
resources/: AndroidSystemSimplify.gresource.xml  AndroidSystemSimplify.ui  AndroidSystemSimplify.ui.in
scripts/: copy_dlls_to_install.sh  pub_installer_to_vmdir.sh
src/: app_func.c  device_func.c  main.c  program_control.c
